# VR-CL-PPE-Dev

./: ReadMe.md
.ipynb_checkpoints/: ReadMe-checkpoint.md
Assets/3D models/: 3Dhexagon.fbx  3Dtriangle.fbx  cockpit.fbx  errorCounter.fbx  horizon artificiel.fbx  left controller v1.fbx  prompt.fbx  right controller v1.fbx
Assets/Animations/: ButtonRelease.anim  ButtonTrigger.anim  Canvas.controller  button.controller  pop-upExpand.anim  pop-upShrink.anim
Assets/Prefabs/: Buttonf.prefab  Canvas Slider.prefab  HPGlia.prefab  Player.prefab  Player_V2.prefab  VrRig.prefab  artificial horizon.prefab  calculotron.prefab  cockpit.prefab  controller cube.prefab  errorCounter.prefab  left controller.prefab  prompt V2.prefab  prompt.prefab  right controller.prefab  scene_changer.prefab
Assets/Resources/: GliaSettings.asset  HPVRSpatialAudioSettings.asset
Assets/ScaleFiles/: test-1636734763.txt  test-1636735129.txt
Assets/Scripts/: Scale.cs  SpatialSoundEnabler.cs  initializer.cs
Assets/SensorsCSVData/: 1636726222.csv  1636726236.csv  1636726256.csv  1636726424.csv  1636726568.csv  1636727967.csv  1636727975.csv  1636728083.csv  1636728469.csv  (+22 more)
C++/HP libs/omnicept-client-samples/: CMakeLists.txt  README.md
C++/HP libs/omnicept-client-samples/omnicept-callback/: CMakeLists.txt  OmniceptCallback.cpp
C++/HP libs/omnicept-client-samples/omnicept-licensing/: CMakeLists.txt  OmniceptLicensing.cpp
C++/HP libs/omnicept-client-samples/omnicept-lvc/: CMakeLists.txt  OmniceptLvc.cpp
C++/HP libs/omnicept-client-samples/omnicept-setup/: CMakeLists.txt  OmniceptSetup.cpp
C++/HP libs/omnicept-client-samples/omnicept-shared/: CMakeLists.txt  ClientBuilderHelper.cpp
C++/HP libs/omnicept-client-samples/omnicept-subscriptions/: CMakeLists.txt  OmniceptSubscriptions.cpp
Instructions/: DocTech.md
ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
Python/: PPE Charts.py  setup.py
(+106 files in other folders)
